add korari staffs

--- a/src/views/email/accountAdded.ejs
+++ b/src/views/email/accountAdded.ejs
@@ -58,7 +58,7 @@
     <br><br>
     <div class="email-container">
       <div class="header"> Account Activation</div>
-      <h4>Welcome to RRA-CLAIM, <%= firstname %>!</h4>
+      <h4>Welcome to millacle web, <%= firstname %>!</h4>
       <p>
         Your account has been successfully activated. Here are your initial
         login details:
@@ -73,7 +73,7 @@
         If you have any questions or need assistance, please do not hesitate to
         <a href="mailto:support@yourdomain.com">contact us</a>.
       </p>
-      <p>Warm regards,<br />RRA-claim</p>
+      <p>Warm regards,<br />milacle-church</p>
       <div class="footer">
         This is an automated message, please do not reply. <br />
         For more information, visit our
