--- a/src/views/email/ResetPasswordCode.ejs
+++ b/src/views/email/ResetPasswordCode.ejs
@@ -74,7 +74,7 @@
       <div class="footer">
         This is an automated message, please do not reply. <br />
         For more information, visit our
-        <a href="https://rra.co.rw">website</a>.
+        <a target="_blank" href="https://miracle-center-remera.vercel.app/">website</a>.
       </div>
     </div>
   </body>
